objects/maps__TPUserPreference__c.object
<CustomObject>
    <fields>
        <fullName>maps__Access__c</fullName>
        <label>Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Editor</fullName>
                </value>
                <value>
                    <fullName>Commenter</fullName>
                    <default>true</default>
                    <label>Commenter</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__Alignment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Alignment</label>
        <referenceTo>maps__TPAlignment__c</referenceTo>
        <relationshipLabel>User Preferences</relationshipLabel>
        <relationshipName>UserPreferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Area__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Area</label>
        <referenceTo>maps__TPArea__c</referenceTo>
        <relationshipLabel>User Preferences</relationshipLabel>
        <relationshipName>UserPreferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__DataSet__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Data Set</label>
        <referenceTo>maps__TPDataSet__c</referenceTo>
        <relationshipLabel>User Preferences</relationshipLabel>
        <relationshipName>UserPreferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Preferences__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Preferences</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Preferences</relationshipLabel>
        <relationshipName>Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Territory Planning User Preference</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AutoId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Planning User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>